# py32-hal

./: .gitignore  BOARDS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  build_common.rs
.github/workflows/: build.yml
examples/: README.md
examples/heap-alloc-f030/: Cargo.toml  readme.md
examples/heap-alloc-f030/.cargo/: config.toml
examples/py32f002b/: Cargo.toml  build.rs  memory.x
examples/py32f002b/.cargo/: config.toml
examples/py32f030/: Cargo.toml
examples/py32f030/.cargo/: config.toml
examples/py32f071/: Cargo.toml  build.rs  memory.x
examples/py32f071/.cargo/: config.toml
examples/py32f072/: Cargo.toml  memory.x
examples/py32f072/.cargo/: config.toml
examples/systick-time-driver-f030/: Cargo.toml  README.md
examples/systick-time-driver-f030/.cargo/: config.toml
examples/systick-time-driver-f030/src/: main.rs
examples/usbd-f072/: Cargo.toml  README.md
examples/usbd-f072/.cargo/: config.toml
scripts/: update_cargo_mcu_features.py
src/: dma.rs  exti.rs  fmt.rs  gpio.rs  lib.rs  macros.rs  rcc.rs  systick_time_driver.rs  time.rs  time_driver.rs  uid.rs  usb.rs
src/adc/: mod.rs  ringbuffered_v2.rs  v1.rs  v2.rs
src/dma/: dma.rs  mod.rs  util.rs  word.rs
src/dma/ringbuffer/: mod.rs
src/dma/ringbuffer/tests/: mod.rs
src/dma/ringbuffer/tests/prop_test/: reader.rs  writer.rs
src/embassy/: mod.rs  systick_time_driver.rs  time_driver.rs
src/flash/: low_level.rs  mod.rs
src/i2c/: mod.rs  v1.rs
src/rcc/: f0.rs  f002b.rs  f030.rs  mco.rs  mod.rs
src/spi/: mod.rs
src/timer/: complementary_pwm.rs  input_capture.rs  low_level.rs  mod.rs  pwm_input.rs  qei.rs  simple_pwm.rs
src/usart/: buffered.rs  mod.rs  ringbuffered.rs
src/usb/: bus.rs  control_pipe.rs  driver.rs  endpoint.rs  mod.rs
