[package]
name = "py32-hal"
version = "0.3.0"
edition = "2021"
authors = ["Decaday <myDecaday@outlook.com>", "Andelf <andelf@gmail.com>"]
repository = "https://github.com/py32-rs/py32-hal"
documentation = "https://docs.rs/py32-hal"
homepage = "https://github.com/py32-rs/py32-hal"
categories = ["embedded", "no-std", "hardware-support"]
description = "HAL and Embassy support for the Py32 family of microcontrollers"
keywords = ["py32", "hal", "embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
# py32-metapac = "0.3.0"
# py32-metapac = { path = "../py32-data/build/py32-metapac"}
py32-metapac = { git = "https://github.com/py32-rs/py32-metapac.git" }


cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "critical-section",
] }
cortex-m-rt = "0.7.5"

embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = [
    "unproven",
] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = { version = "1.0" }
embedded-hal-nb = { version = "1.0" }
embedded-can = "0.4"
embedded-io = { version = "0.6.0" }
embedded-io-async = { version = "0.6.1" }
nb = "1.0.0"

defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
critical-section = "1.2"
cfg-if = "1.0.0"
portable-atomic = { version = "1", features = ["unsafe-assume-single-core", "require-cas"], optional = true }
# musb = { version = "0.2.0", optional = true, features = ["prebuild"] }
musb = { git = "https://github.com/decaday/musb.git", optional = true, features = ["prebuild"] }
# musb = { path = "../musb", optional = true , features = ["prebuild"] }

embassy-usb-driver = {version = "0.1.0", optional = true }
usb-device = {version = "0.3.2", optional = true }


futures-util = { version = "0.3.30", default-features = false }
embassy-hal-internal = { version = "0.2.0", features = [
    "cortex-m",
    "prio-bits-4",
] }
embassy-sync = { version = "0.6.2" }
embassy-futures = { version = "0.1.1" }
embassy-time-driver = { version = "0.2.0", optional = true }
embassy-time = { version = "0.4.0", optional = true }
embassy-time-queue-utils = { version = "0.1", optional = true }

embassy-embedded-hal = { version = "0.3.0", default-features = false }
embedded-storage = "0.3.1"


[build-dependencies]
# py32-metapac = { path = "../py32-data/build/py32-metapac", default-features = false, features = [
# py32-metapac = { version = "0.3.0", default-features = false, features = [
py32-metapac = { git = "https://github.com/py32-rs/py32-metapac.git", default-features = false, features = [
    "metadata",
] }

proc-macro2 = "1.0.89"
quote = "1.0.37"

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
proptest = "1.5.0"
proptest-state-machine = "0.3.0"
# cargo test --no-default-features --features "time exti embassy-usb-driver-impl py32f072c1b"

[features]
default = ["rt", "memory-x", "defmt", "time", "exti"]

rt = ["py32-metapac/rt"]

defmt = ["dep:defmt", "dep:defmt-rtt", "embassy-usb-driver/defmt", "musb?/defmt"]

memory-x = ["py32-metapac/memory-x"]

time = ["dep:embassy-time", "embassy-embedded-hal/time"]

exti = []

embassy-usb-driver-impl = ["dep:musb","dep:embassy-usb-driver", "musb/embassy-usb-driver-impl"]
usb-device-impl = ["dep:musb","dep:usb-device", "musb/usb-device-impl"]

py32f002b = ["py32-metapac/py32f002b"]
py32f030k28 = ["py32-metapac/py32f030k28"]
py32f030f16 = ["py32-metapac/py32f030f16"]
py32f072c1b = ["py32-metapac/py32f072c1b", "dep:musb", "musb/builtin-py32f07x"]

# As of 2023-12-04, this driver is implemented using CC1 as the halfway rollover interrupt, and any
# additional CC capabilities to provide timer alarms to embassy-time. embassy-time requires AT LEAST
# one alarm to be allocatable, which means timers that only have CC1, such as TIM16/TIM17, are not
# candidates for use as an embassy-time driver provider. (a.k.a 1CH and 1CH_CMP are not, others are good.)
time-driver-any = ["_time-driver"]
time-driver-tim1 = ["_time-driver"]
time-driver-tim3 = ["_time-driver"]
time-driver-tim15 = ["_time-driver"]
time-driver-systick = ["dep:portable-atomic", "_time-driver"]

_time-driver = ["dep:embassy-time-driver", "time", "dep:embassy-time-queue-utils"]


[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
features = ["py32f072c1b", "embassy-usb-driver-impl"]
