[package]
name = "py32-hal"
version = "0.4.1"
edition = "2024"
authors = ["Decaday <myDecaday@outlook.com>", "Andelf <andelf@gmail.com>"]
description = "HAL and Embassy support for the Py32 family of microcontrollers"
repository = "https://github.com/py32-rs/py32-hal"
documentation = "https://docs.rs/py32-hal"
homepage = "https://github.com/py32-rs/py32-hal"
categories = ["embedded", "no-std", "hardware-support"]
keywords = ["py32", "hal", "embedded", "no-std", "hardware-support"]
readme = "README.md"
license = "MIT OR Apache-2.0"


[dependencies]
# py32-metapac = { version = "0.5.0", path = "../py32-data/build/py32-metapac"}
py32-metapac = { version = "0.5.0", git = "https://github.com/py32-rs/py32-metapac.git", rev = "46e1b48" }

# --- Cortex-M ---
cortex-m = { version = "0.7", features = [
    "critical-section-single-core",
    "critical-section",
] }
cortex-m-rt = "0.7"

# --- embedded-hal family ---
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-nb = "1.0"

# --- Other embedded crates ---
embedded-can = "0.4"
embedded-io = "0.7"
embedded-io-async = "0.7"
embedded-storage = "0.3"
nb = "1.1"

# --- Embassy ---
embassy-hal-internal = { version = "0.5", features = [
    "cortex-m",
    "prio-bits-4",
] }
embassy-sync = "0.8"
embassy-futures = "0.1"
embassy-time-driver = { version = "0.2", optional = true }
embassy-time = { version = "0.5", optional = true }
embassy-time-queue-utils = { version = "0.3", optional = true }
embassy-embedded-hal = { version = "0.6", default-features = false }
embassy-usb-driver = { version = "0.2", optional = true }

# --- USB ---
musb = { version = "0.3", optional = true, features = ["prebuild"] }
usb-device = { version = "0.3", optional = true }

# --- Utilities ---
cfg-if = "1.0"
critical-section = "1.2"
futures-util = { version = "0.3", default-features = false }
portable-atomic = { version = "1", features = ["require-cas"], optional = true }

# --- Opt-in logging ---
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
log = { version = "0.4", optional = true }


[build-dependencies]
# py32-metapac = { version = "0.5.0", path = "../py32-data/build/py32-metapac", default-features = false, features = [
py32-metapac = { version = "0.5.0", git = "https://github.com/py32-rs/py32-metapac.git", rev = "46e1b48", default-features = false, features = [
    "metadata",
] }
proc-macro2 = "1.0.89"
quote = "1.0.37"


[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
proptest = "1.5.0"
proptest-state-machine = "0.3.0"

[package.metadata.docs.rs]
default-target = "thumbv6m-none-eabi"
features = ["py32f072c1b", "embassy-usb-driver-impl"]

[features]
default = ["rt", "memory-x", "defmt", "time", "exti"]

# --- Core ---
rt = ["py32-metapac/rt"]
memory-x = ["py32-metapac/memory-x"]

# --- Debug / logging ---
defmt = ["dep:defmt", "dep:defmt-rtt", "embassy-usb-driver/defmt", "musb?/defmt"]

# --- Embassy ---
time = ["dep:embassy-time", "embassy-embedded-hal/time"]
exti = []

# --- USB ---
embassy-usb-driver-impl = ["dep:musb", "dep:embassy-usb-driver", "musb/embassy-usb-driver-impl"]
usb-device-impl = ["dep:musb", "dep:usb-device", "musb/usb-device-impl"]

# --- Time driver ---
# CC1 is used as the halfway-rollover interrupt; any additional CC channels
# provide timer alarms for embassy-time. embassy-time requires at least one
# allocatable alarm, so timers with only CC1 (e.g. TIM16/TIM17) are NOT
# eligible. (1CH / 1CH_CMP are excluded; all others are fine.)
time-driver-any = ["_time-driver"]
time-driver-tim1 = ["_time-driver"]
time-driver-tim3 = ["_time-driver"]
time-driver-tim15 = ["_time-driver"]
time-driver-systick = ["dep:portable-atomic", "_time-driver"]

_time-driver = ["dep:embassy-time-driver", "time", "dep:embassy-time-queue-utils"]

# --- Safety ---
# WARNING: this allows reusing SWD debug pins, which is dangerous!
# This HAL has no power-on delay, so reconfiguring SWD pins immediately on
# startup can permanently lock you out of reprogramming ("brick") the chip.
# The risk is critical on MCUs without a BOOT button and bootloader
# (e.g. PY32F002B, PY32L020, PY32C64x — on PA2 and PB6).
# Enable only if you understand the risk and have a recovery plan.
unsafe-reuse-swd-pins = []


# --- MCU selection ---
# DO NOT EDIT MANUALLY. This section is automatically generated by `scripts/update_cargo_mcu_features.py`.
py32f002aa15 = ["py32-metapac/py32f002aa15"]
py32f002af15 = ["py32-metapac/py32f002af15"]
py32f002al15 = ["py32-metapac/py32f002al15"]
py32f002aw15 = ["py32-metapac/py32f002aw15"]
py32f002ax5 = ["py32-metapac/py32f002ax5"]
py32f002bd15 = ["py32-metapac/py32f002bd15"]
py32f002bf15 = ["py32-metapac/py32f002bf15"]
py32f002bw15 = ["py32-metapac/py32f002bw15"]
py32f002bx5 = ["py32-metapac/py32f002bx5"]
py32f003f14 = ["py32-metapac/py32f003f14"]
py32f003f16 = ["py32-metapac/py32f003f16"]
py32f003f17 = ["py32-metapac/py32f003f17"]
py32f003f18 = ["py32-metapac/py32f003f18"]
py32f003f26 = ["py32-metapac/py32f003f26"]
py32f003f36 = ["py32-metapac/py32f003f36"]
py32f003f48 = ["py32-metapac/py32f003f48"]
py32f003f56 = ["py32-metapac/py32f003f56"]
py32f003f68 = ["py32-metapac/py32f003f68"]
py32f003l16 = ["py32-metapac/py32f003l16"]
py32f003l18 = ["py32-metapac/py32f003l18"]
py32f003l24 = ["py32-metapac/py32f003l24"]
py32f003l26 = ["py32-metapac/py32f003l26"]
py32f003l28 = ["py32-metapac/py32f003l28"]
py32f003w16 = ["py32-metapac/py32f003w16"]
py32f003w18 = ["py32-metapac/py32f003w18"]
py32f003x4 = ["py32-metapac/py32f003x4"]
py32f003x6 = ["py32-metapac/py32f003x6"]
py32f003x7 = ["py32-metapac/py32f003x7"]
py32f003x8 = ["py32-metapac/py32f003x8"]
py32f030e18 = ["py32-metapac/py32f030e18"]
py32f030e26 = ["py32-metapac/py32f030e26"]
py32f030f16 = ["py32-metapac/py32f030f16"]
py32f030f17 = ["py32-metapac/py32f030f17"]
py32f030f18 = ["py32-metapac/py32f030f18"]
py32f030f26 = ["py32-metapac/py32f030f26"]
py32f030f27 = ["py32-metapac/py32f030f27"]
py32f030f28 = ["py32-metapac/py32f030f28"]
py32f030f36 = ["py32-metapac/py32f030f36"]
py32f030f38 = ["py32-metapac/py32f030f38"]
py32f030f46 = ["py32-metapac/py32f030f46"]
py32f030k14 = ["py32-metapac/py32f030k14"]
py32f030k16 = ["py32-metapac/py32f030k16"]
py32f030k17 = ["py32-metapac/py32f030k17"]
py32f030k18 = ["py32-metapac/py32f030k18"]
py32f030k24 = ["py32-metapac/py32f030k24"]
py32f030k26 = ["py32-metapac/py32f030k26"]
py32f030k27 = ["py32-metapac/py32f030k27"]
py32f030k28 = ["py32-metapac/py32f030k28"]
py32f030k38 = ["py32-metapac/py32f030k38"]
py32f030k46 = ["py32-metapac/py32f030k46"]
py32f030k48 = ["py32-metapac/py32f030k48"]
py32f030l14 = ["py32-metapac/py32f030l14"]
py32f030l16 = ["py32-metapac/py32f030l16"]
py32f030x4 = ["py32-metapac/py32f030x4"]
py32f030x6 = ["py32-metapac/py32f030x6"]
py32f030x7 = ["py32-metapac/py32f030x7"]
py32f030x8 = ["py32-metapac/py32f030x8"]
py32f031c18 = ["py32-metapac/py32f031c18"]
py32f031h18 = ["py32-metapac/py32f031h18"]
py32f031k18 = ["py32-metapac/py32f031k18"]
py32f031x8 = ["py32-metapac/py32f031x8"]
py32f040c16 = ["py32-metapac/py32f040c16"]
py32f040c18 = ["py32-metapac/py32f040c18"]
py32f040c1b = ["py32-metapac/py32f040c1b"]
py32f040k1b = ["py32-metapac/py32f040k1b"]
py32f040k2b = ["py32-metapac/py32f040k2b"]
py32f040r1b = ["py32-metapac/py32f040r1b"]
py32f040x6 = ["py32-metapac/py32f040x6"]
py32f040x8 = ["py32-metapac/py32f040x8"]
py32f040xb = ["py32-metapac/py32f040xb"]
py32f071c1b = ["py32-metapac/py32f071c1b", "musb?/builtin-py32f07x"]
py32f071k18 = ["py32-metapac/py32f071k18", "musb?/builtin-py32f07x"]
py32f071k1b = ["py32-metapac/py32f071k1b", "musb?/builtin-py32f07x"]
py32f071r1b = ["py32-metapac/py32f071r1b", "musb?/builtin-py32f07x"]
py32f071x8 = ["py32-metapac/py32f071x8", "musb?/builtin-py32f07x"]
py32f071xb = ["py32-metapac/py32f071xb", "musb?/builtin-py32f07x"]
py32f072c1b = ["py32-metapac/py32f072c1b", "musb?/builtin-py32f07x"]
py32f072k1b = ["py32-metapac/py32f072k1b", "musb?/builtin-py32f07x"]
py32f072r1b = ["py32-metapac/py32f072r1b", "musb?/builtin-py32f07x"]
py32f072xb = ["py32-metapac/py32f072xb", "musb?/builtin-py32f07x"]
py32f403c1b = ["py32-metapac/py32f403c1b"]
py32f403c1c = ["py32-metapac/py32f403c1c"]
py32f403c1d = ["py32-metapac/py32f403c1d"]
py32f403c2d = ["py32-metapac/py32f403c2d"]
py32f403k1b = ["py32-metapac/py32f403k1b"]
py32f403k1c = ["py32-metapac/py32f403k1c"]
py32f403r1c = ["py32-metapac/py32f403r1c"]
py32f403r1d = ["py32-metapac/py32f403r1d"]
py32f403r2d = ["py32-metapac/py32f403r2d"]
py32f403v1d = ["py32-metapac/py32f403v1d"]
py32f403xb = ["py32-metapac/py32f403xb"]
py32f403xc = ["py32-metapac/py32f403xc"]
py32f403xd = ["py32-metapac/py32f403xd"]
py32l020f15 = ["py32-metapac/py32l020f15"]
py32l020l15 = ["py32-metapac/py32l020l15"]
py32l020x5 = ["py32-metapac/py32l020x5"]
py32m010a15 = ["py32-metapac/py32m010a15"]
py32m010a25 = ["py32-metapac/py32m010a25"]
py32m010ax5 = ["py32-metapac/py32m010ax5"]
py32m020f16 = ["py32-metapac/py32m020f16"]
py32m020x6 = ["py32-metapac/py32m020x6"]
py32m030e18 = ["py32-metapac/py32m030e18"]
py32m030x8 = ["py32-metapac/py32m030x8"]
py32m031e18 = ["py32-metapac/py32m031e18"]
py32m031x8 = ["py32-metapac/py32m031x8"]
py32m070e1b = ["py32-metapac/py32m070e1b"]
py32m070k1b = ["py32-metapac/py32m070k1b"]
py32m070xb = ["py32-metapac/py32m070xb"]
py32md310k18 = ["py32-metapac/py32md310k18"]
py32md310x8 = ["py32-metapac/py32md310x8"]
py32md320k18 = ["py32-metapac/py32md320k18"]
py32md320x8 = ["py32-metapac/py32md320x8"]
py32md410k18 = ["py32-metapac/py32md410k18"]
py32md410x8 = ["py32-metapac/py32md410x8"]
py32md420k18 = ["py32-metapac/py32md420k18"]
py32md420x8 = ["py32-metapac/py32md420x8"]
py32t020g16 = ["py32-metapac/py32t020g16"]
py32t020w16 = ["py32-metapac/py32t020w16"]
py32t020x6 = ["py32-metapac/py32t020x6"]
