[package]
name = "py32f002b-examples"
version = "0.4.1"
edition = "2024"
publish = false

[dependencies]
py32-hal = { path = "../../", features = [ "time-driver-tim1", "py32f002bx5"]}

# This is necessary because `py32-hal` uses `portable-atomic`,
# but Cortex-M0 does not provide Atomic (CAS) support.
portable-atomic = { version = "1", features = ["critical-section"] }

panic-halt = "1.0"
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "critical-section",
] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5"
panic-probe = { version = "1.0", features = ["print-defmt"] }

embassy-sync = { version = "0.8", features = ["defmt"] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }

embedded-io = "0.7"
embedded-io-async = "0.7"
defmt = "1.1"
defmt-rtt = "1.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
