[package]
name = "py32f072-usbd-examples"
version = "0.2.1"
edition = "2021"

[dependencies]
panic-halt = "1.0.0"
cortex-m = { version = "0.7.7", features = [
    "critical-section-single-core",
    "critical-section",
] }
cortex-m-rt = "0.7.3"
cortex-m-semihosting = { version = "0.5" }
panic-probe = { version = "0.3", features = ["print-defmt"] }

py32-hal = { path = "../../", default-features = false,features = [ "py32f072c1b", 
    "time-driver-tim15", 
    "defmt", 
    "rt", 
    "memory-x", 
    "usb-device-impl",
    "embassy"
]}

defmt = "0.3"
defmt-rtt = "0.4"
embassy-futures = "0.1.1"
embassy-usb = { version = "0.3.0", features = [ "defmt"]}
usbd-human-interface-device = { version = "0.5.0", features = [ "defmt"]}

portable-atomic = { version = "1.5", features = ["critical-section"] }
static_cell = "2.1"
usbd-serial = "0.2.2"
usb-device = "0.3.2"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

